--- a/c/C/Project1/Project1.vcxproj.filters
+++ b/c/C/Project1/Project1.vcxproj.filters
@@ -48,5 +48,26 @@
     <ClCompile Include="2588.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="1330.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="9498.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="2753.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="14681.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="2884.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="2739.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="10950.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
