solving step by step ~4

--- a/c/C/Project1/Project1.vcxproj.filters
+++ b/c/C/Project1/Project1.vcxproj.filters
@@ -96,5 +96,14 @@
     <ClCompile Include="10871.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="10952.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="10951.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1110.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
