--- a/c/C/Project1/Project1.vcxproj.filters
+++ b/c/C/Project1/Project1.vcxproj.filters
@@ -105,5 +105,26 @@
     <ClCompile Include="1110.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="10818.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="2562.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="2577.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="3052.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1546.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="8958.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="4344.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
