--- a/c/C/Project1/Project1.vcxproj.filters
+++ b/c/C/Project1/Project1.vcxproj.filters
@@ -153,5 +153,8 @@
     <ClCompile Include="1157.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="1152.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
