--- a/greedy_cpp/greedy_cpp/greedy_cpp.vcxproj
+++ b/greedy_cpp/greedy_cpp/greedy_cpp.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="1026.cpp" />
     <ClCompile Include="11047.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
