--- a/greedy_cpp/greedy_cpp/greedy_cpp.vcxproj.filters
+++ b/greedy_cpp/greedy_cpp/greedy_cpp.vcxproj.filters
@@ -36,5 +36,8 @@
     <ClCompile Include="1541.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="1783.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
