--- a/greedy_cpp/greedy_cpp/greedy_cpp.vcxproj.filters
+++ b/greedy_cpp/greedy_cpp/greedy_cpp.vcxproj.filters
@@ -39,5 +39,8 @@
     <ClCompile Include="1783.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="5585.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
