--- a/greedy_cpp/greedy_cpp/greedy_cpp.vcxproj
+++ b/greedy_cpp/greedy_cpp/greedy_cpp.vcxproj
@@ -160,6 +160,7 @@
     <ClCompile Include="1931handmde.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="2217.cpp" />
     <ClCompile Include="2839_반복문으로.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
