--- a/greedy_cpp/greedy_cpp/greedy_cpp.vcxproj.filters
+++ b/greedy_cpp/greedy_cpp/greedy_cpp.vcxproj.filters
@@ -42,5 +42,8 @@
     <ClCompile Include="5585.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="2217.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
