--- a/cpp_rank/silver5/silver5/silver5.vcxproj.filters
+++ b/cpp_rank/silver5/silver5/silver5.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="1037.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="2693.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
