--- a/cpp_rank/silver5/silver5/silver5.vcxproj.filters
+++ b/cpp_rank/silver5/silver5/silver5.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="2693.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="1094.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
