--- a/cpp_rank/silver4/silver4/silver4.vcxproj.filters
+++ b/cpp_rank/silver4/silver4/silver4.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="1049.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="1302.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
