--- a/cpp_rank/silver5/silver5/silver5.vcxproj.filters
+++ b/cpp_rank/silver5/silver5/silver5.vcxproj.filters
@@ -33,5 +33,8 @@
     <ClCompile Include="1427.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="1789.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
