--- a/cpp_rank/bronze1/bronze1/bronze1.vcxproj.filters
+++ b/cpp_rank/bronze1/bronze1/bronze1.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="1193.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="1259.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
