--- a/cpp_rank/silver3/silver3/silver3.vcxproj.filters
+++ b/cpp_rank/silver3/silver3/silver3.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="2312.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="4375.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
