--- a/cpp_rank/bronze5/bronze5/bronze5.vcxproj
+++ b/cpp_rank/bronze5/bronze5/bronze5.vcxproj
@@ -139,7 +139,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="6749.cpp" />
+    <ClCompile Include="16430.cpp" />
+    <ClCompile Include="6749.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
