--- a/cpp_rank/bronze5/bronze5/bronze5.vcxproj.filters
+++ b/cpp_rank/bronze5/bronze5/bronze5.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="6749.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="16430.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
