--- a/cpp_rank/silver4/silver4/silver4.vcxproj.filters
+++ b/cpp_rank/silver4/silver4/silver4.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="9012.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="11866.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
