--- a/cpp_rank/silver4/silver4/silver4.vcxproj.filters
+++ b/cpp_rank/silver4/silver4/silver4.vcxproj.filters
@@ -33,5 +33,8 @@
     <ClCompile Include="1676.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="2960.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
