--- a/cpp_rank/silver3/silver3/silver3.vcxproj
+++ b/cpp_rank/silver3/silver3/silver3.vcxproj
@@ -142,7 +142,10 @@
     <ClCompile Include="2312.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="4375.cpp" />
+    <ClCompile Include="2606.cpp" />
+    <ClCompile Include="4375.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
