--- a/cpp_rank/gold5/gold5/gold5.vcxproj
+++ b/cpp_rank/gold5/gold5/gold5.vcxproj
@@ -142,7 +142,7 @@
     <ClCompile Include="1011.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="2075queue공부하고다시.cpp" />
+    <ClCompile Include="2075.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
