--- a/cpp_rank/gold5/gold5/gold5.vcxproj.filters
+++ b/cpp_rank/gold5/gold5/gold5.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="1011.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="2075queue공부하고다시.cpp">
+    <ClCompile Include="2075.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
