--- a/cpp_rank/bronze5/bronze5/bronze5.vcxproj
+++ b/cpp_rank/bronze5/bronze5/bronze5.vcxproj
@@ -139,7 +139,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="16430.cpp" />
+    <ClCompile Include="16430.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="2475.cpp" />
     <ClCompile Include="6749.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
