--- a/cpp_rank/bronze2/bronze2/bronze2.vcxproj.filters
+++ b/cpp_rank/bronze2/bronze2/bronze2.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="2775.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="2908.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
