--- a/cpp_rank/silver5/silver5/silver5.vcxproj.filters
+++ b/cpp_rank/silver5/silver5/silver5.vcxproj.filters
@@ -39,5 +39,8 @@
     <ClCompile Include="2822.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="1181.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
