--- a/cpp_rank/bronze2/bronze2/bronze2.vcxproj.filters
+++ b/cpp_rank/bronze2/bronze2/bronze2.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="2908.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="2231.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
