--- a/cpp_rank/silver1/silver1/silver1.vcxproj
+++ b/cpp_rank/silver1/silver1/silver1.vcxproj
@@ -139,7 +139,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="2002.cpp" />
+    <ClCompile Include="9020.cpp" />
+    <ClCompile Include="2002.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
