--- a/c_solving step by step/C/Project1/Project1.vcxproj
+++ b/c_solving step by step/C/Project1/Project1.vcxproj
@@ -253,7 +253,10 @@
     <ClCompile Include="2742.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="2752.c" />
+    <ClCompile Include="2751%28더 빠른 정렬로 다시%29.c" />
+    <ClCompile Include="2752.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="2753.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
